# gmobile

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
data/: 61-gmobile-wakeup.hwdb  gmobile.gresources.xml  meson.build
data/devices/display-panels/: nothing,spacewar.json  oneplus,enchilada.json
debian/: changelog  control  gbp.conf  rules
doc/: gmobile.udev.rst  meson.build
examples/: gm-display-panel-run-phosh.c
src/: gm-mcc-mnc.c  gm-mcc-mnc.h  gm-svg-path.c  gm-timeout.c  gm-timeout.h  gm-util.c  meson.build
tests/: meson.build
